<resources>
    <string name="app_name">Payroll Them</string>
    <string name="quote">now make all ledger easy</string>
    <string name="payroll_them">PAYROLL THEM</string>
    <string name="todo1">TODO</string>
    <string name="employee_login"><u>EMPLOYEE LOGIN</u></string>
    <string name="employer_login"><u>EMPLOYER LOGIN</u></string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="user_name">Corporate name</string>
    <string name="employee_id">Employee Id</string>
    <string name="todo9">TODO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="create_account">REGISTER</string>
    <string name="employer_logins">EMPLOYER LOGIN</string>
    <string name="employer_Registration">EMPLOYER REGISTRATION</string>
    <string name="todo5">TODO</string>
    <string name="already">Already Registered? LOGIN</string>
    <string name="notRegyet">New User? REGISTER</string>
    <string name="login_emp">Login</string>
    <string name="todo22">TODO</string>
    <string name="title_activity_postlogin_activity">postlogin_activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="xyz_company">XYZ COMPANY</string>
    <string name="xyz_gmail_com">xyz@gmail.com</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_drawer">navigationDrawer</string>
    <string name="title_activity_navdrawer">navdrawer</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_department">Department</string>
    <string name="menu_Employee">Employee</string>
    <string name="pay_slip">Payment slip</string>
    <string name="set_salary">Set Salary</string>
    <string name="pay_history">Payment History</string>
    <string name="corporate_name">Corporate\n Name</string>
    <string name="admin_s_name">Admin\'s\n Name</string>
    <string name="corporate_namee">Corporate\n Name</string>
    <string name="admin_s_namee">Admin\'s\n Name</string>
    <string name="egender">Gender</string>
    <string name="eemail">Email</string>
    <string name="ephone_no">Phone no.</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="emailsz">Email</string>
    <string name="phone">Phone</string>
    <string name="genzder">Gender</string>
    <string name="department">Department</string>
    <string name="job_title">Job title</string>
    <string name="fund">Fund</string>
    <string name="loan">Loan</string>
    <string name="save">Save</string>
    <string name="address">Address</string>
    <string name="bank_account_no">Bank Account no.</string>
    <string name="department_namezz">Department Name</string>
    <string name="department_idzz">Department Id</string>
    <string name="employee_name">Employee Name</string>
    <string name="employee_idss">Employee id</string>
    <string name="todo879">TODO</string>
    <string name="gender">Gender</string>
    <string name="todo15">TODO</string>
    <string name="phone_no">Phone no.</string>
    <string name="corporate_namesz">Corporate Name</string>
</resources>