<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/relativelistlayout"
    android:padding="10dp">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/dpc"
        android:id="@+id/profilepicemp"
        android:contentDescription="@string/todo879" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/empnamelist"
        android:layout_toEndOf="@+id/profilepicemp"
        android:text="@string/employee_name"
        android:textSize="20sp"
        android:layout_centerVertical="true"
        android:layout_marginStart="28dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/empid"
        android:layout_toEndOf="@+id/empnamelist"
        android:text="@string/employee_idss"
        android:textSize="20sp"
        android:layout_centerVertical="true"
        android:layout_marginStart="28dp"/>
</RelativeLayout>