<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1e254a"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:background="@drawable/back_profile">

        <ImageView
            android:id="@+id/corporate"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/todo1"
            android:src="@drawable/corporate" />
    </RelativeLayout>

    <TextView
        android:id="@+id/employer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="60dp"
        android:text="@string/employer_login"
        android:textColor="#ffffff"
        android:textSize="21sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginLeft="60dp"
        android:background="@drawable/other_side">

        <ImageView
            android:id="@+id/user"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/todo2"
            android:padding="2dp"
            android:src="@drawable/employee" />
    </RelativeLayout>

    <TextView
        android:id="@+id/employee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="15dp"
        android:text="EMPLOYEE LOGIN"
        android:textColor="#ffffff"
        android:textSize="21sp"
        android:textStyle="bold" />
</LinearLayout>
