<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:id="@+id/secondlay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Profile.addProfInfo">
    <ProgressBar
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/prbar"
        android:layout_gravity="center"
        android:indeterminateTint="#9C27B0"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="27dp"
                android:layout_height="32dp"
                android:layout_gravity="left"
                android:src="@drawable/back"
                android:contentDescription="@string/todo15" />

            <TextView
                android:id="@+id/save_changes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:text="Save changes"
                android:textColor="#E91E63"
                android:textSize="22sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="15dp"
            android:text="Edit Profile"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/dc"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="125dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/dpc" />
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="bottom"
                android:id="@+id/changepicup"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/adddp"/>
        </LinearLayout>
        <ImageView
            android:layout_width="119dp"
            android:layout_height="31dp"
            android:id="@+id/uploadup"
            android:visibility="gone"
            android:layout_gravity="center"
            android:src="@drawable/upload" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30sp"
                android:orientation="vertical"
                android:paddingTop="9dp">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="25dp"
                    android:text="@string/corporate_namee"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/adm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="25dp"
                    android:text="@string/admin_s_namee"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/Gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="25dp"
                    android:text="@string/egender"
                    android:textSize="22sp" />



                <TextView
                    android:id="@+id/cont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="25dp"
                    android:text="@string/ephone_no"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/epf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:text="E.P.F (r.o.i)"
                    android:textSize="22sp" />
                <TextView
                    android:id="@+id/noteepf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="25dp"
                    android:text="set PF rate of interest"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/EcopN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="50dp"
                    android:inputType="textPersonName"
                    android:hint="@string/corporate_namesz"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/EadmN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:inputType="textPersonName"
                    android:layout_marginBottom="10dp"
                    android:hint="Admin's Name"
                    android:textSize="22sp" />

                <Spinner
                    android:id="@+id/EGenderN"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="12dp"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/EcontN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:inputType="phone"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/phone_no"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/EpfrN"
                    android:inputType="numberDecimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="5dp"
                    android:hint="rate of current year"
                    android:textSize="22sp" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>